apply plugin: "java"

version '1.0'

sourceCompatibility = 1.8

sourceSets.main.java.srcDirs = ["src"]

repositories{
    mavenCentral()
    maven{ url 'https://www.jitpack.io' }
}

ext{
    //the build number that this plugin is made for
    mindustryVersion = 'v111'
}

repositories {
    flatDir {
        dirs 'libs'
    }
}

dependencies{
    implementation name: 'Mindustry'
    implementation 'junit:junit:4.12'
    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
    compile 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
    compile 'org.mongodb:mongo-java-driver:3.12.7'
    compile 'commons-codec:commons-codec:1.11'
    compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
}

jar{
    archiveFileName = "${project.archivesBaseName}.jar"
    from{
        configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}
    }

    from(rootDir){
        include "plugin.json"
    }
}
